--- a/mailPilot-v11/side-scroller.csproj
+++ b/mailPilot-v11/side-scroller.csproj
@@ -61,9 +61,12 @@
   <ItemGroup>
     <Content Include="assets\images\1945.bmp" />
     <Content Include="assets\images\atlas.png" />
+    <Content Include="assets\images\background.png" />
     <Content Include="assets\images\bigland.jpg" />
     <Content Include="assets\images\character atlas.png" />
     <Content Include="assets\images\cloud.png" />
+    <Content Include="assets\images\collectables.png" />
+    <Content Include="assets\images\hazards.png" />
     <Content Include="assets\images\island.png" />
     <Content Include="assets\images\ocean_vert.gif" />
     <Content Include="assets\images\plane.png" />
@@ -117,9 +120,11 @@
     <TypeScriptCompile Include="Scripts\managers\collision.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
     <TypeScriptCompile Include="Scripts\objects\cloud.ts" />
+    <TypeScriptCompile Include="Scripts\objects\crystal.ts" />
     <TypeScriptCompile Include="Scripts\objects\island.ts" />
     <TypeScriptCompile Include="Scripts\objects\label.ts" />
     <TypeScriptCompile Include="Scripts\objects\land.ts" />
+    <TypeScriptCompile Include="Scripts\objects\lifeOrb.ts" />
     <TypeScriptCompile Include="Scripts\objects\ocean.ts" />
     <TypeScriptCompile Include="Scripts\objects\plane.ts" />
     <TypeScriptCompile Include="Scripts\objects\player.ts" />
