--- a/mailPilot-v11/side-scroller.csproj
+++ b/mailPilot-v11/side-scroller.csproj
@@ -127,15 +127,15 @@
     <TypeScriptCompile Include="Scripts\managers\asset.ts" />
     <TypeScriptCompile Include="Scripts\managers\collision.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
-    <TypeScriptCompile Include="Scripts\objects\cloud.ts" />
     <TypeScriptCompile Include="Scripts\objects\crystal.ts" />
+    <TypeScriptCompile Include="Scripts\objects\horFirePit.ts" />
+    <TypeScriptCompile Include="Scripts\objects\vertFirePit.ts" />
+    <TypeScriptCompile Include="Scripts\objects\horPit.ts" />
+    <TypeScriptCompile Include="Scripts\objects\vertPit.ts" />
     <TypeScriptCompile Include="Scripts\objects\hazards.ts" />
-    <TypeScriptCompile Include="Scripts\objects\island.ts" />
     <TypeScriptCompile Include="Scripts\objects\label.ts" />
     <TypeScriptCompile Include="Scripts\objects\land.ts" />
     <TypeScriptCompile Include="Scripts\objects\lifeOrb.ts" />
-    <TypeScriptCompile Include="Scripts\objects\ocean.ts" />
-    <TypeScriptCompile Include="Scripts\objects\plane.ts" />
     <TypeScriptCompile Include="Scripts\objects\player.ts" />
     <TypeScriptCompile Include="Scripts\objects\scoreboard.ts" />
     <TypeScriptCompile Include="Scripts\lib\preloadjs.d.ts" />
