--- a/mailPilot-v11/side-scroller.csproj
+++ b/mailPilot-v11/side-scroller.csproj
@@ -60,15 +60,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\images\atlas.png" />
+    <Content Include="assets\images\score.png" />
+    <Content Include="assets\images\thief atlas.png" />
     <Content Include="assets\images\plains.png" />
     <Content Include="assets\images\character atlas.png" />
     <Content Include="assets\images\collectables.png" />
     <Content Include="assets\images\desert.png" />
-    <Content Include="assets\images\final score logo.png" />
-    <Content Include="assets\images\game over logo.png" />
+    <Content Include="assets\images\ending logo.png" />
     <Content Include="assets\images\hazards.png" />
     <Content Include="assets\images\start screen.png" />
-    <Content Include="assets\images\title screen logo.png" />
+    <Content Include="assets\images\title logo.png" />
     <Content Include="assets\images\wasteland.png" />
     <Content Include="assets\sounds\crystal grab.wav" />
     <Content Include="assets\sounds\Game Over.mp3" />
@@ -121,6 +122,7 @@
     <TypeScriptCompile Include="Scripts\managers\collision.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
     <TypeScriptCompile Include="Scripts\objects\crystal.ts" />
+    <TypeScriptCompile Include="Scripts\objects\enemy.ts" />
     <TypeScriptCompile Include="Scripts\objects\hazards.ts" />
     <TypeScriptCompile Include="Scripts\objects\label.ts" />
     <TypeScriptCompile Include="Scripts\objects\background.ts" />
