--- a/mailPilot-v11/side-scroller.csproj
+++ b/mailPilot-v11/side-scroller.csproj
@@ -60,7 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\images\atlas.png" />
+    <Content Include="assets\images\explosion.png" />
+    <Content Include="assets\images\mage.png" />
     <Content Include="assets\images\score.png" />
+    <Content Include="assets\images\fireball.png" />
     <Content Include="assets\images\thief atlas.png" />
     <Content Include="assets\images\plains.png" />
     <Content Include="assets\images\character atlas.png" />
@@ -71,6 +74,7 @@
     <Content Include="assets\images\start screen.png" />
     <Content Include="assets\images\title logo.png" />
     <Content Include="assets\images\wasteland.png" />
+    <Content Include="assets\images\weapons.png" />
     <Content Include="assets\sounds\crystal grab.wav" />
     <Content Include="assets\sounds\Game Over.mp3" />
     <Content Include="assets\sounds\hurt.wav" />
