--- a/mailPilot-v11/side-scroller.csproj
+++ b/mailPilot-v11/side-scroller.csproj
@@ -60,7 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\images\atlas.png" />
+    <Content Include="assets\images\atlas2.png" />
     <Content Include="assets\images\explosion.png" />
+    <Content Include="assets\images\game over.jpg" />
     <Content Include="assets\images\mage.png" />
     <Content Include="assets\images\score.png" />
     <Content Include="assets\images\fireball.png" />
@@ -124,6 +126,7 @@
     <TypeScriptCompile Include="Scripts\game.ts" />
     <TypeScriptCompile Include="Scripts\managers\asset.ts" />
     <TypeScriptCompile Include="Scripts\managers\collision.ts" />
+    <TypeScriptCompile Include="Scripts\objects\helpButton.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
     <TypeScriptCompile Include="Scripts\objects\crystal.ts" />
     <TypeScriptCompile Include="Scripts\objects\enemies.ts" />
@@ -138,6 +141,8 @@
     <TypeScriptCompile Include="Scripts\lib\preloadjs.d.ts" />
     <TypeScriptCompile Include="Scripts\lib\soundjs.d.ts" />
     <TypeScriptCompile Include="Scripts\objects\shinyLabel.ts" />
+    <TypeScriptCompile Include="Scripts\objects\weapons.ts" />
+    <TypeScriptCompile Include="Scripts\managers\weaponsmanager.ts" />
     <TypeScriptCompile Include="Scripts\states\gameover.ts" />
     <TypeScriptCompile Include="Scripts\states\level3.ts" />
     <TypeScriptCompile Include="Scripts\states\menu.ts" />
